css/adastrapad.webflow.css
/* ... */
.hero-slide-1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
}

.hero-slide-3 {
  display: none;
  grid-auto-columns: 1fr;
  grid-column-gap: 16px;
  grid-row-gap: 16px;
  -ms-grid-columns: 1fr;
  grid-template-columns: 1fr;
  -ms-grid-rows: auto auto;
  grid-template-rows: auto auto;
}

.milkomeda-text {
  display: block;
  grid-auto-columns: 1fr;
  grid-column-gap: 13px;
  grid-row-gap: 16px;
  -ms-grid-columns: 3fr 0.5fr;
  grid-template-columns: 3fr 0.5fr;
  -ms-grid-rows: auto;
  grid-template-rows: auto;
}

.milkomeda-logo {
  width: auto;
  height: 1.9rem;
  padding-left: 0.25rem;
}

.text-span-8 {
  color: #ff941d;
}

.milkomeda-container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0rem;
  margin-bottom: 2rem;
  padding: 0.25rem 1rem;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fff;
  text-decoration: none;
  cursor: pointer;
}

.milkomeda-container.card {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: auto;
  padding: 0.25rem 1rem;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border-radius: 100px;
  box-shadow: 0 0 10px 0 rgba(0, 22, 50, 0.06);
}

.milkomeda-container.shadow-level-1.corner-100.margin-medium.margin-vertical {
  text-decoration: none;
}

.image-4 {
  width: auto;
  height: 2.5rem;
}

.shadow-level-1 {
  box-shadow: 0 -1px 10px 0 rgba(0, 34, 128, 0.1);
}

.corner-100 {
  border-radius: 100px;
}

.milkomeda-texts-container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.link-disabled {
  color: rgba(69, 73, 84, 0.5);
  text-decoration: none;
}

.link-disabled:hover {
  color: rgba(46, 49, 56, 0.5);
}

.link-disabled.w--current {
  color: #04f;
}

.link-disabled.disable-link:hover {
  color: #2e3138;
}

.column {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
}

.fs-cc-banner_close {
  margin-left: 0.75rem;
  padding: 0.625rem;
  border-radius: 999rem;
  background-color: #fff;
  box-shadow: 1px 1px 12px 0 rgba(0, 0, 0, 0.1);
  opacity: 1;
  cursor: pointer;
}

.fs-cc-banner_container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  max-width: 62.5rem;
  margin-right: auto;
  margin-left: auto;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
}

.fs-cc-banner_buttons-wrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 0;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  grid-auto-columns: 1fr;
  -ms-grid-columns: auto auto;
  grid-template-columns: auto auto;
  -ms-grid-rows: auto;
  grid-template-rows: auto;
}

.fs-cc-manager_icon {
  width: 2rem;
  height: 2rem;
}

.fs-cc-prefs_checkbox-field {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 2.75rem;
  height: 1.5rem;
  margin-bottom: 0px;
  padding: 0.125rem;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-box-align: stretch;
  -webkit-align-items: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  border-radius: 999rem;
  background-color: #ccc;
}

.cookies-manager {
  display: block;
}

.fs-cc-manager_component {
  position: fixed;
  left: 1.25rem;
  top: auto;
  right: auto;
  bottom: 1.25rem;
  z-index: 999;
  display: block;
}

.fs-cc-banner_text {
  margin-right: 1.5rem;
  color: #616161;
}

.fs-cc-prefs_content {
  overflow: auto;
  padding: 2.5rem 2rem;
}

.fs-cc-manager_trigger {
  display: none;
}

.fs-cc-prefs_checkbox {
  position: absolute;
  left: 0%;
  top: 0%;
  right: 0%;
  bottom: 0%;
  z-index: 1;
  width: 100%;
  height: 100%;
  margin-top: 0px;
  margin-left: 0px;
  opacity: 0;
  cursor: pointer;
}

.fs-cc-prefs_toggle-wrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 0.5rem;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
}
/* ... */

